v1.0.2 (2024-06-08)
- new Livestream (timeshift)
- added setting to use old livestream format
- LF conversion

v1.0.1 beta (2024-06-05)
- fix routing requirement
- show segment option added
- cache reload fix
- related video option
- fix UA stream errors (#6)
- orf tvthek has been disabled

v1.0.0 beta (2024-01-06)
- inital ORF ON addon
- beta version
- most stuff is working but everything needs to be tested a little more
- orf on is still in beta so stuff might change until the final release in april 2024
- translation stuff is still missing

* 0.12.12
 - ORF TVthek is down and replaced by ORF On
 - ServiceAPI is forced on this version

* 0.12.11
 - Major API Change on ServiceAPI regarding assets and json structure (#137)

* 0.12.10
 - fixed livestream multistream not available #133

* 0.12.9
 - fixed livestream endpoint changes serviceapi

* 0.12.8
 - added direct uri for simple iptv (livestreams) #108

* 0.12.7
 - fixed url parameters for drm livestreams
 - added UHD 50fps option for livestreams

* 0.12.6
 - fixed drm content for restart (license server error 500)

* 0.12.5
 - added livestream specials for htmlscraper

* 0.12.4
 - added header to drm license server request (fixes error 500 for drm content)

* 0.12.3-1
 - bugfix livestream restart (kodi <19 only)
 - removed quality setting
 - livestream active bugfix

* 0.12.3
 - service api fixes (auth & restart)
 - minor logging improvements

* 0.12.2
 - drm for restart
 - drm livestream license url
 - better quality selection handling for livestreams

* 0.12.1
- fixed schedule error (serviceapi) #102

* 0.12.0
- added drm livestream playback

* 0.11.1
- fixed broken livestreams for serviceapi (kodi matrix only)

* 0.11.0
- kodi v19 support (older versions have to use 0.10.X for now)

* 0.10.3
- fixed broken livestream when "bundesland heute" videos are available

* 0.10.2
- tvthek added new quality strings. caused error on full hd setting

* 0.10.1
- fixed kodi crash when using the playlist listitem

* 0.10.0